Added blog link

--- a/css/app.css
+++ b/css/app.css
@@ -106,6 +106,8 @@ fieldset[disabled] .navbar-titan .btn-link:focus {
   border-style: none;
   padding: 10px 5px 10px 0px;
   list-style-type: none;
+  text-align: center;
+  margin-left: -40px;
 }
 
 .well-success {
